--- a/bjs/10_function_object/index.html
+++ b/bjs/10_function_object/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="button-block">
-                <button class="btn btn-primary" id="retry">Обновить</button>
+                <button class="btn btn-primary" id="retry">Создать данные</button>
                 <button class="btn btn-warning" id="clear">Очистить</button>
             </div>            
         </div>
